k8s/ispydvr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ispyagentdvr
  namespace: dvr
spec:
  selector:
    app: ispyagentdvr
  ports:
  - name: http
    port: 8090
    targetPort: 8090
  type: ClusterIP
