k8s/ispydvr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvr-ingress
  namespace: dvr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
#  tls:
#  - hosts:
#      - dvr.local.koryalbert.net
#    secretName: koryalbert-tls
  rules:
  - host: dvr.local.koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ispyagentdvr
                port:
                  number: 8090
